# spoken-to-signed-translation

./: .gitignore  .pylintrc  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  pyproject.toml
.github/: python-publish.yml
.github/workflows/: lint.yaml  release.yaml  test.yaml
assets/dummy_lexicon/: index.csv
assets/dummy_lexicon/de-sgg/: essen.pose
assets/dummy_lexicon/sgg/: kinder.pose  kleine.pose  pizza.pose
evaluations/2023-05/: README.md
gloss-to-pose/: README.md
scripts/: visualize_coverage.py
spoken_to_signed/: bin.py  download_lexicon.py
spoken_to_signed/assets/fingerspelling_animation/: .gitignore  README.md  interpreter.pose  process_data.py
spoken_to_signed/assets/fingerspelling_animation/poses/: S00000-S10020+S2450a.pose  S00000-S10120.pose  S00000-S10620.pose  S00000-S10e20.pose  S00000-S11502.pose  S00000-S11520.pose  S00000-S11920.pose  S00000-S11a20.pose  S00000-S14020.pose  S00000-S14051.pose  S00000-S14720.pose  S00000-S14a20.pose  S00000-S16d20.pose  S00000-S17620.pose  S00000-S18620.pose  S00000-S18d20.pose  S00000-S19220+S2a20c.pose  S00000-S19220.pose  S00000-S19a20.pose  S00000-S1ce20.pose  S00000-S1dc20.pose  S00000-S1f000.pose  S00000-S1f051.pose  S00000-S1f720.pose  S00000-S1fb20.pose  S00000-S20320.pose  S00000.pose  S10020+S2450a-S00000.pose  S10020+S2450a-S10020+S2450a.pose  S10020+S2450a-S10120.pose  S10020+S2450a-S10620.pose  S10020+S2450a-S10e20.pose  S10020+S2450a-S11502.pose  S10020+S2450a-S11520.pose  S10020+S2450a-S11920.pose  S10020+S2450a-S11a20.pose  S10020+S2450a-S14020.pose  S10020+S2450a-S14051.pose  S10020+S2450a-S14720.pose  S10020+S2450a-S14a20.pose  (+691 more)
spoken_to_signed/assets/fingerspelling_lexicon/: README.md  create_index.py  download.py  index.csv  preprocess_files.py
spoken_to_signed/assets/fingerspelling_lexicon/ase/: fs-sts13206cebad70790ee136a34c7a74af5e.pose  fs-sts203d382660b73b889208b3e5838967e4.pose  fs-sts2731bcd231d24ad973c0d6ff13dad014.pose  fs-sts2d180da92361dfe3de28a2a827767a01.pose  fs-sts2ed18da646d87198c9cd5c06872bfa15.pose  fs-sts3365ce526db21c2c176bae2aa0538b34.pose  fs-sts3bc89e88306fa8ce6e673a53cb650ed1.pose  fs-sts4db1d6889f5c6456b5dec1f8cdc63f78.pose  fs-sts4ecc496719efc4347d3c90ca8796355f.pose  fs-sts630197db5f5f6907bb730f0d37839e1f.pose  fs-sts69a948fe3da89d238c15929e3ce5627b.pose  fs-sts6f3e0742d295cc9cb6e06e00fcdf9822.pose  fs-sts6feec7402302644466228e2518ea55ff.pose  fs-sts70e29691f4d099366c2a5bae85d65184.pose  fs-sts73570c5e25f984f10e3bccfdf608ae48.pose  fs-sts9ac04fa08bf5dd15015724922a6604d8.pose  fs-stsb4576a3769cbce7026c2d32ea5206cb6.pose  fs-stsb59b802824c9cef8b347c04c2325f702.pose  fs-stsc0f68923fe12ab1862f2174adfb0182a.pose  fs-stsc37ea04175ded3fa3e71df27bed7cb05.pose  fs-stsd4266153e5392060923bfa7668849cb6.pose  fs-stsd65edb878f7869ed178bb27efdac0153.pose  fs-stsdf51e2883d1f5b6a41dbe07d0bdce722.pose  fs-stse28e9ac023b0e29ca0a3acc12dc46540.pose  fs-stsecaadae860da0bc2002490d4d1f2f650.pose  fs-stsf6361531b087bba7e2d9f561cfd3bada.pose
spoken_to_signed/assets/fingerspelling_lexicon/asq/: fs-sts03c0d56a4400236a9d0628322fedac07.pose  fs-sts13dae1ba4d51ab6ba1f121891e972fcb.pose  fs-sts20a687a912a6f62c33ff9650e2ec882c.pose  fs-sts2256fb809a7aad2eea237f06677bd09d.pose  fs-sts2efce5cbe6b3ee3dcc05507620d5e9f2.pose  fs-sts31fa8f0aede575e1810f688f9027c459.pose  fs-sts3664c1c80ede9b8922049e77976ff5f0.pose  fs-sts43bab199e348e887b9c92e359f870af8.pose  fs-sts5c41fc45b499b68202b84515a0726f03.pose  fs-sts61d3d99b4e8c355f33228c09b04a388c.pose  fs-sts643a94c0b8fae736bda4bc018f66d55c.pose  fs-sts6f35be310efcc1f54a836197a83925e5.pose  fs-sts740e9a3c779400f32d0b94d9004c8812.pose  fs-sts7858f1f93f5230c9fa70b88ac4e7007e.pose  fs-sts7b6b28af058d613196adb687a845c484.pose  fs-sts81e249eab828927ce7a6c96048e0941a.pose  fs-sts876b10bb4b077e906887ec5f3e7ca7d9.pose  fs-sts93672c7beb2bd5d4176d3292f45ff037.pose  fs-sts95e1d747f2573eea60be3e4b97d48da1.pose  fs-sts9744e7065f9c4a27079aa567c3f0b1b4.pose  fs-sts98a04f470949efc4f2fa67d0775419c1.pose  fs-sts9ae28c06321b5413b35932494b8907e7.pose  fs-stsbca1fec3281dfc0f66f9b501bece40d6.pose  fs-stsc5436d52a4e47595998fc7c69afb6eaf.pose  fs-stscdb9d7e28faf3f7e54a619ee3cfa5326.pose  fs-stsd3f51bd7a11a3c0cc4a91eb9d9468e73.pose  fs-stsd907a5eaf1bf75b6c4f356a973a73dba.pose  fs-stsdf09b56a84df62462d9bd62dd5ab9798.pose  fs-stsee101869ce1940b24c8e73a99233837f.pose  fs-stsf5c46886b92eeb5bbd7022e162946ac3.pose  fs-stsfb66173beeed5670a4be9b6a0c844237.pose
spoken_to_signed/assets/fingerspelling_lexicon/bzs/: fs-sts006436b4bc1306c74572d395454e1bf8.pose  fs-sts1c01e25aead9ef75ec69e8b5a8cb8731.pose  fs-sts1d188facc8ff56e73333962c5f0624bb.pose  fs-sts1d7b177003a8dfde188e0234ccf2db04.pose  fs-sts34a146615c49916dbbbb55b27f37dfc1.pose  fs-sts41f48a0c43886df038ee40e0d545935d.pose  fs-sts45bdc8cdf877b955015f2f00faa112fd.pose  fs-sts4bb64ae155818b72af7250f31a401030.pose  fs-sts50b13ed3719a4ffcef8b0046bf6aaea9.pose  fs-sts51c4cdd553f9811a50ea68ddb197e15e.pose  (+17 more)
spoken_to_signed/gloss_to_pose/: __init__.py  concatenate.py  coverage.py  languages.py  lookup.py  smoothing.py
spoken_to_signed/gloss_to_pose/lookup/: __init__.py  csv_lookup.py  fingerspelling_lookup.py  gloss_normalization_helpers.py  lookup.py  lru_cache.py  signwriting_fingerspelling_lookup.py
spoken_to_signed/pose_to_video/: README.md  __init__.py
spoken_to_signed/text_to_gloss/: README.md  common.py  few_shots.json  gpt.py  nmt.py  rules.py  simple.py  spacylemma.py  types.py
src/: bin.py
src/text_to_gloss/: README.md  nmt.py  simple_lemmatizer.py
tests/: test_coverage.py  test_e2e.py  test_rules.py
text-to-gloss/: README.md
(+484 files in other folders)
